--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "taskbuddy",
   "version": "1.0.0",
   "description": "Task Management Tool",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "node index.js",
-    "start": "nodemon index.js"
+    "test": "node app.js",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/lakpafutilama/taskbuddy#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mongoose": "^7.4.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
