--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.4.1",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.32.1"
   }
 }
