--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
   },
   "homepage": "https://github.com/lakpafutilama/taskbuddy#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
